email check and form control

--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -28,31 +28,40 @@
   "signup-title": "Sign up",
   "signup-input-repeatpassword": "Repeat password",
   "signup-button-signup": "Sign up",
+  "signup-error-missingpseudo": "missing pseudo",
+  "signup-error-missinglogin": "missing login",
+  "signup-error-invalidlogin": "invalid email",
+  "signup-error-missingpassword": "missing password",
+  "signup-error-missingrepeatpassword": "missing repeated password",
+  "signup-error-passwordmissmatch": "password missmatch",
   "signup-snack-discarded": "Sign up discarded",
   "signup-snack-success": "Signed up!",
   "signup-snack-existinguser": "Account already existing",
   "signin-title": "Sign in",
   "signin-button-signin": "Sign in",
+  "signin-error-missinglogin": "missing login",
+  "signin-error-invalidlogin": "invalid email",
+  "signin-error-missingpassword": "missing password",
   "signin-snack-unauthorized": "Wrong password",
   "signin-snack-notfound": "Account not found",
   "signin-snack-success": "Signed in!",
-  "myaccount-label-infos": "Info",
-  "myaccount-label-pseudo": "My pseudo",
-  "myaccount-button-changepseudo": "Change pseudo",
-  "myaccount-label-email": "My email",
-  "myaccount-button-changeemail": "Change email",
-  "myaccount-label-password": "My password",
-  "myaccount-button-changepassword": "Change password",
-  "myaccount-label-account": "Account",
-  "myaccount-label-merge": "Merge my account",
-  "myaccount-details-merge": "Enables to merge two accounts together, which is relevant if you've been invited with two different emails.",
-  "myaccount-button-merge": "Merge account",
-  "myaccount-label-anonymize": "Anonymize my account",
-  "myaccount-details-anonymize": "Enables to remove personal information from the app, without affecting the tables you're part of.",
-  "myaccount-button-anonymize": "Anonymize account",
-  "myaccount-label-close": "Close my account",
-  "myaccount-details-close": "To permanently delete your account, removing you from any table you've been part of.",
-  "myaccount-button-close": "Close account",
+  "account-label-infos": "My data",
+  "account-label-pseudo": "My pseudo",
+  "account-button-changepseudo": "Change pseudo",
+  "account-label-email": "My email",
+  "account-button-changeemail": "Change email",
+  "account-label-password": "My password",
+  "account-button-changepassword": "Change password",
+  "account-label-account": "Account",
+  "account-label-merge": "Merge",
+  "account-details-merge": "Enables to merge two accounts together, which is relevant if you've been invited with two different emails.",
+  "account-button-merge": "Merge accounts",
+  "account-label-anonymize": "Anonymize",
+  "account-details-anonymize": "Enables to remove personal information from the app, without affecting the tables you're part of.",
+  "account-button-anonymize": "Anonymize account",
+  "account-label-close": "Close",
+  "account-details-close": "To permanently delete your account, removing you from any table you've been part of.",
+  "account-button-close": "Close account",
   "mystats-label-mystats": "My stats",
   "mytables-label-mytables": "My tables",
   "table-title": "Table",
