--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -23,7 +23,7 @@
   "generic-menu-home": "Home",
   "generic-menu-account": "My account",
   "generic-menu-table": "Table",
-  "generic-menu-edittable":"Edit table",
+  "generic-menu-edittable": "Edit table",
   "generic-menu-signout": "Sign out",
   "signup-title": "Sign up",
   "signup-input-repeatpassword": "Repeat password",
@@ -71,6 +71,7 @@
   "table-label-won": "won in",
   "table-label-lost": "lost in",
   "table-label-against": "against",
+  "table-error-missingname": "missing name",
   "table-confirm-title-delete": "Sure to delete table?",
   "table-confirm-content-delete": "You're about to delete the table.\n\nThis will delete the table and all associated games.",
   "table-confirm-title-deletenoeusers": "No more player here!",
