--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -29,7 +29,7 @@
   "signup-input-repeatpassword": "Repeat password",
   "signup-button-signup": "Sign up",
   "signup-error-missingpseudo": "missing pseudo",
-  "signup-error-missinglogin": "missing login",
+  "signup-error-missinglogin": "missing email",
   "signup-error-invalidlogin": "invalid email",
   "signup-error-missingpassword": "missing password",
   "signup-error-missingrepeatpassword": "missing repeated password",
@@ -39,7 +39,7 @@
   "signup-snack-existinguser": "Account already existing",
   "signin-title": "Sign in",
   "signin-button-signin": "Sign in",
-  "signin-error-missinglogin": "missing login",
+  "signin-error-missinglogin": "missing email",
   "signin-error-invalidlogin": "invalid email",
   "signin-error-missingpassword": "missing password",
   "signin-snack-unauthorized": "Wrong password",
@@ -72,6 +72,7 @@
   "table-label-lost": "lost in",
   "table-label-against": "against",
   "table-error-missingname": "missing name",
+  "table-error-creationwithoutplayers": "missing players to create a table",
   "table-confirm-title-delete": "Sure to delete table?",
   "table-confirm-content-delete": "You're about to delete the table.\n\nThis will delete the table and all associated games.",
   "table-confirm-title-deletenoeusers": "No more player here!",
@@ -82,6 +83,10 @@
   "invite-title": "Invite a player",
   "invite-input-acknowledgement": "I know this person",
   "invite-button-invite": "Invite",
+  "invite-error-missinglogin": "missing email",
+  "invite-error-invalidlogin": "invalid email",
+  "invite-error-missingpseudo": "missing pseudo",
+  "invite-error-missingacknowledgement": "missing acknowledgement",
   "invite-snack-success": "User invited!",
   "game-title": "Game",
   "game-label-8plis": "Coop. 8 folds",
