--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -109,6 +109,10 @@
   "game-input-attack": "Attack",
   "game-input-defense": "Defense",
   "game-input-outcome": "Outcome",
+  "game-error-missingcontract": "missing contract",
+  "game-error-attackmissmatch": "inconsistent attack",
+  "game-error-defensemissmatch": "inconsistent defense",
+  "game-error-outcomemissmatch": "inconsistent outcome",
   "game-snack-saved": "Game saved!",
   "game-snack-discarded": "Game discarded",
   "tocome-title": "To come...",
