--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -37,6 +37,12 @@
   "signup-snack-discarded": "Sign up discarded",
   "signup-snack-success": "Signed up!",
   "signup-snack-existinguser": "Account already existing",
+  "activation-label-inprogress": "Account activation in progress",
+  "activation-label-activatedtitle": "Account activated!",
+  "activation-label-activatedaccountexplanations": "Your account has been successfully activated.\n\nYou can now sign in!",
+  "activation-button-tohome": "To home to sign in",
+  "activation-label-notfoundtitle": "Account activation impossible",
+  "activation-label-notfoundaccountexplanations": "It seems the token from the url is not valid.",
   "signin-title": "Sign in",
   "signin-button-signin": "Sign in",
   "signin-error-missinglogin": "missing email",
