--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -15,9 +15,10 @@
   "generic-input-pseudo": "Pseudo",
   "generic-input-email": "Email",
   "generic-input-password": "Password",
+  "generic-snack-api-unmanagedtype": "Unamanged API response",
+  "generic-snack-api-errornetwork": "Network issue",
   "generic-snack-WIP": "Work in progress...",
   "generic-snack-saving": "Saving in progress",
-  "generic-snack-errornetwork": "Error : Network issue",
   "generic-snack-errorunknown": "Unknown error :/",
   "generic-snack-errorsaltgeneration": "Encryption preparation failed",
   "generic-snack-errorpasswordencryption": "Password encryption failed",
@@ -37,9 +38,7 @@
   "signup-error-missingpassword": "missing password",
   "signup-error-missingrepeatpassword": "missing repeated password",
   "signup-error-passwordmissmatch": "password missmatch",
-  "signup-snack-discarded": "Sign up discarded",
   "signup-snack-success": "Signed up!",
-  "signup-snack-existinguser": "Account already existing",
   "activation-label-inprogress": "Account activation in progress",
   "activation-label-error": "Error during activation",
   "activation-label-errorexplanation": "Sincere apologies for the inconvenience.\n\nPlease try again later.",
@@ -53,10 +52,9 @@
   "signin-error-missinglogin": "missing email",
   "signin-error-invalidlogin": "invalid email",
   "signin-error-missingpassword": "missing password",
-  "signin-snack-unauthorized": "Wrong password",
-  "signin-snack-error": "Sign in error",
-  "signin-snack-notfound": "Account not found",
   "signin-snack-success": "Signed in!",
+  "signin-snack-unauthorized": "Wrong password",
+  "signin-snack-notfound": "Account not found",
   "account-label-infos": "My data",
   "account-label-pseudo": "My pseudo",
   "account-button-changepseudo": "Change pseudo",
