--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -3,6 +3,7 @@
     "label": {
       "product": "CoWhist 19",
       "account": "Account",
+      "help": "Help",
       "tocome": "To come...",
       "tocomeintro": "This functionality is not available yet.",
       "tocomedetails": "We are delighted by your interest and propose to record it for the team to prioritize for this! \n This is anonymous ;)"
@@ -11,6 +12,7 @@
       "home": "Home",
       "account": "My account",
       "table": "Table",
+      "help": "Help",
       "signout": "Sign out"
     },
     "input": {
