--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -241,6 +241,8 @@
       "won": "won in",
       "lost": "lost in",
       "against": "against",
+      "guest" : "a guest", 
+      "removeduser" : "a removed user",
       "contract": {
         "8plis": "Coop. 8 folds",
         "9plis": "Coop. 9 folds",
@@ -253,6 +255,7 @@
         "solo8": "Solo 8 folds",
         "petitemisere": "Small misery",
         "grandemisere": "Large misery",
+        "grandemisereetalee": "Open large misery",
         "trou8": "Hole in 8 folds",
         "trou9": "Hole in 9 folds",
         "petitchelem": "Small Slam",
