--- a/src/i18n/i18n-EN.json
+++ b/src/i18n/i18n-EN.json
@@ -3,7 +3,8 @@
     "label": {
       "product": "CoWhist 19",
       "account": "Account",
-      "help": "Help",
+      "documentation": "Documentation",
+      "about": "About",
       "tocome": "To come...",
       "tocomeintro": "This functionality is not available yet.",
       "tocomedetails": "We are delighted by your interest and propose to record it for the team to prioritize for this! \n This is anonymous ;)"
@@ -12,7 +13,8 @@
       "home": "Home",
       "account": "My account",
       "table": "Table",
-      "help": "Help",
+      "documentation": "Documentation",
+      "about": "About",
       "signout": "Sign out"
     },
     "input": {
